force-app/main/default/src/objects/PJN_Field_Setting__mdt/PJN_Field_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Account Search
Purpose: Defines the fields displayed in Account Search, for both the search form and results table. Currently the Account Create section is not being used. This is step 3 in setting up Account Search.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>Field Setting</label>
    <pluralLabel>Field Settings</pluralLabel>
</CustomObject>