force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Account_Create_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Create_Order__c</fullName>
    <description>The order that this field is displayed on the Account Create form.</description>
    <inlineHelpText>The order that this field is displayed on the Account Create form.</inlineHelpText>
    <label>Account Create Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>