force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Record_Type__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>The Account Record Type that this field entry applies to.  &quot;All&quot; means it applies to all person or institution record types depending on the MED_Is_Person_Record_Type__c setting.</description>
    <inlineHelpText>The Account Record Type that this field entry applies to.  &quot;All&quot; means it applies to all person or institution record types depending on the MED_Is_Person_Record_Type__c setting.</inlineHelpText>
    <label>Account Record Type</label>
    <length>57</length>
    <type>Text</type>
</CustomField>