force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Case_Accounts_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Accounts_Order__c</fullName>
    <description>The order which the fields should appear on the interaction accounts screen once an account has been selected. Any fields configured will appear before those configured in Contact Info Case Mappings</description>
    <inlineHelpText>The order which the fields should appear on the interaction accounts screen once an account has been selected. Any fields configured will appear before those configured in Contact Info Case Mappings</inlineHelpText>
    <label>Interaction Accounts Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>