force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Contact_Info_Create_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Info_Create_Order__c</fullName>
    <description>The order to display the field when creating a new contact information record on an existing account.</description>
    <inlineHelpText>The order to display the field when creating a new contact information record on an existing account.</inlineHelpText>
    <label>Contact Info Create Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>