force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Contact_Info_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Info_Record_Type__c</fullName>
    <description>The record type this field should be associated with if it is a Contact Information field.</description>
    <inlineHelpText>The record type this field should be associated with if it is a Contact Information field.</inlineHelpText>
    <label>Contact Info Record Type</label>
    <length>57</length>
    <type>Text</type>
</CustomField>