force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field__c</fullName>
    <description>The field that the settings are for.</description>
    <label>Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>