force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Include_in_DCR__c.field-meta.xml
<CustomField>
    <fullName>PJN_Include_in_DCR__c</fullName>
    <description>Whether this field is within the scope of a DCR process.</description>
    <label>Include in DCR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not_Included__c</fullName>
                <default>true</default>
                <label>Not Included</label>
            </value>
            <value>
                <fullName>On_Insert__c</fullName>
                <label>On Insert</label>
            </value>
            <value>
                <fullName>On_Update__c</fullName>
                <label>On Update</label>
            </value>
            <value>
                <fullName>On_Insert_and_Update__c</fullName>
                <label>On Insert and Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>