force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Is_Person_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Person_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the field belongs to a Person Account Configuration.</description>
    <inlineHelpText>Indicates the field belongs to a Person Account Configuration.</inlineHelpText>
    <label>Is Person Record Type?</label>
    <type>Checkbox</type>
</CustomField>