force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_New_Affiliation_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_Affiliation_Order__c</fullName>
    <description>The order fields should appear in when creating a new Affiliation</description>
    <inlineHelpText>The order fields should appear in when creating a new Affiliation</inlineHelpText>
    <label>New Affiliation Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>