force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Object__c.field-meta.xml
<CustomField>
    <fullName>PJN_Object__c</fullName>
    <description>The object that the field is on.</description>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Child_Account_vod__c</fullName>
                <isActive>false</isActive>
                <label>Child_Account_vod__c</label>
            </value>
            <value>
                <fullName>PJN_Affiliation__c</fullName>
                <isActive>false</isActive>
                <label>PJN_Affiliation__c</label>
            </value>
            <value>
                <fullName>PJN_Contact_Information__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>