force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Quick_Search_Field_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Quick_Search_Field_Order__c</fullName>
    <description>The order this field shows up on selected requester search fields.</description>
    <inlineHelpText>The order this field shows up on selected requester search fields.</inlineHelpText>
    <label>Quick Search Field Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>