force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Required_for_Save__c.field-meta.xml
<CustomField>
    <fullName>PJN_Required_for_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In order to create or edit a record with this field on it the user must provide a value for this field</description>
    <inlineHelpText>In order to create or edit a record with this field on it the user must provide a value for this field</inlineHelpText>
    <label>Required for Save</label>
    <type>Checkbox</type>
</CustomField>