force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Search_Field_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Search_Field_Order__c</fullName>
    <label>Search Field Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>