force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Search_Results_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Search_Results_Order__c</fullName>
    <description>Indicates the order this field should appear in search results on the Account Search.</description>
    <inlineHelpText>Indicates the order this field should appear in search results on the Account Search.</inlineHelpText>
    <label>Search Results Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>