force-app/main/default/src/objects/PJN_Field_Setting__mdt/fields/PJN_Show_in_Primary_Results__c.field-meta.xml
<CustomField>
    <fullName>PJN_Show_in_Primary_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this field should be shown in the main row of the search results.</description>
    <inlineHelpText>Indicates that this field should be shown in the main row of the search results.</inlineHelpText>
    <label>Show in Primary Results</label>
    <type>Checkbox</type>
</CustomField>