force-app/main/default/src/objects/PJN_Field_Setting__mdt/listViews/AccountDCRSettingsAll.listView-meta.xml
<ListView>
    <fullName>AccountDCRSettingsAll</fullName>
    <columns>MasterLabel</columns>
    <columns>PJN_Include_in_DCR__c</columns>
    <columns>PJN_Field__c</columns>
    <columns>PJN_Account_Record_Type__c</columns>
    <columns>PJN_Is_Person_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PJN_Object__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <filters>
        <field>PJN_Include_in_DCR__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Account DCR Config - All</label>
    <language>en_US</language>
</ListView>