force-app/main/default/src/objects/PJN_Field_Setting__mdt/listViews/PJN_Business_Account_Search_Fields.listView-meta.xml
<ListView>
    <fullName>PJN_Business_Account_Search_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Object__c</columns>
    <columns>PJN_Field__c</columns>
    <columns>PJN_Account_Record_Type__c</columns>
    <columns>PJN_Contact_Info_Record_Type__c</columns>
    <columns>PJN_Search_Field_Order__c</columns>
    <columns>PJN_Search_Results_Order__c</columns>
    <columns>PJN_Show_in_Primary_Results__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PJN_Is_Person_Record_Type__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>2. Business Account Search Fields</label>
    <language>en_US</language>
</ListView>